# sales-ai-exploration

./: extend-data.ipynb  pyproject.toml
schemas/: rideshine-qualification.json
