[tool.poetry]
name = "sales-ai-exploration"
version = "0.1.0"
description = ""
authors = ["james-julius <jamesdarby7@gmail.com>"]
readme = "README.md"
packages = [{include = "sales_ai_exploration"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
